--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,4 +22,20 @@
   .help-error {
     @apply mt-1 text-xs text-red-600;
   }
+
+
+}
+
+/*sidebar*/
+.sidebar-link {
+    @apply relative flex items-center gap-3 px-3 py-2.5 rounded-xl
+           text-slate-700 hover:bg-slate-100 transition-all duration-200;
+}
+
+.sidebar-link.active {
+    @apply bg-slate-100 font-semibold text-slate-900;
+}
+
+.sidebar-link svg {
+    @apply w-5 h-5 shrink-0;
 }
